[gd_scene load_steps=13 format=3 uid="uid://66ftxmjmu23p"]

[ext_resource type="Script" uid="uid://bbsvy80e8b3df" path="res://Cooking (mechanics and ui)/Scripts/cooking_scene.gd" id="1_iv1l6"]
[ext_resource type="Texture2D" uid="uid://1nhtcm7yjokm" path="res://Cooking (mechanics and ui)/Assets/Icons, UI, and window popup.png" id="2_5a071"]
[ext_resource type="Script" uid="uid://dksnl7jm68i8h" path="res://Cooking (mechanics and ui)/Scripts/ingredient.gd" id="2_lwslm"]
[ext_resource type="Texture2D" uid="uid://rhrms2vi5gd2" path="res://Cooking (mechanics and ui)/Assets/UI cooking.png" id="3_wobfx"]
[ext_resource type="Script" uid="uid://oox1pt4tv8mf" path="res://Cooking (mechanics and ui)/Scripts/ingredient_popup.gd" id="4_oxed2"]
[ext_resource type="PackedScene" uid="uid://dfq7velefot8o" path="res://Cooking (mechanics and ui)/Scenes/ingredient_container.tscn" id="5_fph4g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wobfx"]
atlas = ExtResource("2_5a071")
region = Rect2(64, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a071"]
atlas = ExtResource("2_5a071")
region = Rect2(80, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d7ps"]
atlas = ExtResource("3_wobfx")
region = Rect2(83, 51, 43, 39)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qqh86"]
texture = SubResource("AtlasTexture_5d7ps")

[sub_resource type="AtlasTexture" id="AtlasTexture_qqh86"]
atlas = ExtResource("3_wobfx")
region = Rect2(481, 129, 46, 46)
filter_clip = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xmic6"]
texture = SubResource("AtlasTexture_qqh86")

[node name="CookingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_iv1l6")
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0277778
anchor_top = 0.0246914
anchor_right = 0.069375
anchor_bottom = 0.098642
offset_right = -31.92
offset_bottom = -31.92
scale = Vector2(2.995, 2.995)
texture_normal = SubResource("AtlasTexture_wobfx")
texture_pressed = SubResource("AtlasTexture_5a071")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.159722
anchor_top = 0.17284
anchor_right = 0.490278
anchor_bottom = 0.760493
offset_right = 67.2
offset_bottom = 67.2
scale = Vector2(0.85, 0.85)
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Ingredients" type="GridContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3
metadata/_edit_use_anchors_ = true

[node name="IngredientSlot" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot2" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot2"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot3" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot3"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot4" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot4"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot5" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot5"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot6" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot6"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot7" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot7"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot8" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot8"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="IngredientSlot9" type="PanelContainer" parent="PanelContainer/MarginContainer/Ingredients"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qqh86")

[node name="Ingredient" type="TextureButton" parent="PanelContainer/MarginContainer/Ingredients/IngredientSlot9"]
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_lwslm")

[node name="CookButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.198785
anchor_top = 0.796296
anchor_right = 0.303819
anchor_bottom = 0.864197
text = "Cook"
metadata/_edit_use_anchors_ = true

[node name="ClearButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.34809
anchor_top = 0.796296
anchor_right = 0.453124
anchor_bottom = 0.864198
text = "Clear"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.541667
anchor_top = 0.320988
anchor_right = 0.616319
anchor_bottom = 0.555556
theme_override_font_sizes/font_size = 111
text = "="
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
anchor_left = 0.665799
anchor_top = 0.296296
anchor_right = 0.834201
anchor_bottom = 0.595679
offset_bottom = 3.05176e-05
theme_override_styles/panel = SubResource("StyleBoxTexture_xmic6")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 11

[node name="OutputRect" type="TextureRect" parent="PanelContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="PanelContainer3" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.611111
anchor_top = 0.222222
anchor_right = 0.888889
anchor_bottom = 0.257137
offset_bottom = 6.375
metadata/_edit_use_anchors_ = true

[node name="OutputLabel" type="Label" parent="PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Output Text"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HiddenOutputLabel" type="Label" parent="PanelContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="IngredientPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(545, 451)
script = ExtResource("4_oxed2")
ingredient_container = ExtResource("5_fph4g")

[node name="ScrollContainer" type="ScrollContainer" parent="IngredientPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 541.0
offset_bottom = 447.0

[node name="VBoxContainer" type="VBoxContainer" parent="IngredientPopup/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="IngredientPopup/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="IngredientPopup/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Inventory"

[node name="Button" type="Button" parent="IngredientPopup/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
text = "close"

[node name="Timer" type="Timer" parent="."]

[node name="CookTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CookButton" to="." method="_on_cook_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="timeout" from="CookTimer" to="." method="_on_cook_timer_timeout"]
